Updated scriptJS and discover

--- a/discover.html
+++ b/discover.html
@@ -220,6 +220,10 @@
 
         </div>
 
+        <div>
+          <p>Testing, clean</p>
+        </div>
+
         <div class="row gy-4 mt-1">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <img src="https://i.pinimg.com/564x/92/39/01/923901a79d72df691ae8ceb79ad338dd.jpg" alt="">
